--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query-devtools": "^5.59.0",
+    "appwrite": "^16.0.2",
     "framer-motion": "^11.3.30",
     "portfolio": "file:",
     "react": "^18.3.1",
