--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "portfolio": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
